[package]
name = "smart-garden-gateway-mqtt-client"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/easybe/smart-garden-gateway-mqtt-client"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nng = "1.0.1"
rumqttc = { version = "0.19.0", default-features = false }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1 ", features = ["rt-multi-thread"] }

# Dependecies of dependecies held back for Rust 1.58.1
log = "=0.4.18"
once_cell="=1.17.2"
thiserror = "1.0.41"
