[package]
name = "sg-mqtt-client"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/easybe/smart-garden-gateway-mqtt-client"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.26.2", features = ["hostname"], default-features = false }
nng = "1.0.1"
rumqttc = { version = "0.19.0", default-features = false }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.63"
tokio = { version = "1.29.1 ", features = ["rt-multi-thread"] }
